--- a/pages/18734.html
+++ b/pages/18734.html
@@ -461,17 +461,17 @@ margin-left: 0em;
 
 <p><strong>(non-singular distributions)</strong></p>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_733a48600da8d78f3d1d0f4f0344fde037e0d90a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math>, a <a class='existingWikiWord' href='/nlab/show/smooth+map'>smooth function</a> <math class='maruku-mathml' display='inline' id='mathml_733a48600da8d78f3d1d0f4f0344fde037e0d90a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>b</mi><mo>∈</mo><msup><mi>C</mi> <mn>∞</mn></msup><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>b \in C^\infty(\mathbb{R}^n)</annotation></semantics></math> induces a <a class='existingWikiWord' href='/nlab/show/distribution'>distribution</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_733a48600da8d78f3d1d0f4f0344fde037e0d90a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>∫</mo> <mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow></msub><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mi>b</mi><msub><mi>dvol</mi> <mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow></msub><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><msubsup><mi>C</mi> <mi>cp</mi> <mn>∞</mn></msubsup><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo><mo>⟶</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_ac129d6a5797e90784049f0d0bce577b1af94aee_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math>, a <a class='existingWikiWord' href='/nlab/show/smooth+map'>smooth function</a> <math class='maruku-mathml' display='inline' id='mathml_ac129d6a5797e90784049f0d0bce577b1af94aee_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>b</mi><mo>∈</mo><msup><mi>C</mi> <mn>∞</mn></msup><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>b \in C^\infty(\mathbb{R}^n)</annotation></semantics></math> induces a <a class='existingWikiWord' href='/nlab/show/distribution'>distribution</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ac129d6a5797e90784049f0d0bce577b1af94aee_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>∫</mo> <mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow></msub><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mi>b</mi><msub><mi>dvol</mi> <mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow></msub><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><msubsup><mi>C</mi> <mi>cp</mi> <mn>∞</mn></msubsup><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo><mo>⟶</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>
   \int_{\mathbb{R}^n} (-) b dvol_{\mathbb{R}^n}
   \;\colon\;
   C_{cp}^\infty(\mathbb{R}^n) \longrightarrow \mathbb{R}
 
 </annotation></semantics></math></div>
-<p>by <a class='existingWikiWord' href='/nlab/show/integral'>integration</a> of smooth functions against <math class='maruku-mathml' display='inline' id='mathml_733a48600da8d78f3d1d0f4f0344fde037e0d90a_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>b</mi><mi>dvol</mi></mrow><annotation encoding='application/x-tex'>b dvol</annotation></semantics></math>.</p>
+<p>by <a class='existingWikiWord' href='/nlab/show/integral'>integration</a> of smooth functions against <math class='maruku-mathml' display='inline' id='mathml_ac129d6a5797e90784049f0d0bce577b1af94aee_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>b</mi><mi>dvol</mi></mrow><annotation encoding='application/x-tex'>b dvol</annotation></semantics></math>.</p>
 
 <p>This construction defines a linear inclusion</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_733a48600da8d78f3d1d0f4f0344fde037e0d90a_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mn>∞</mn></msup><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo><mo>↪</mo><mi>𝒟</mi><mo>′</mo><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ac129d6a5797e90784049f0d0bce577b1af94aee_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mn>∞</mn></msup><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo><mo>↪</mo><mi>𝒟</mi><mo>′</mo><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
   C^\infty(\mathbb{R}^n) \hookrightarrow \mathcal{D}&#39;(\mathbb{R}^n)
 
 </annotation></semantics></math></div>
@@ -485,7 +485,7 @@ margin-left: 0em;
 
 <p><strong>(<a class='existingWikiWord' href='/nlab/show/support+of+a+distribution'>singular support of a distribution</a>)</strong></p>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_733a48600da8d78f3d1d0f4f0344fde037e0d90a_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> let <math class='maruku-mathml' display='inline' id='mathml_733a48600da8d78f3d1d0f4f0344fde037e0d90a_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><mo>∈</mo><mi>𝒟</mi><mo>′</mo><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\phi \in \mathcal{D}&#39;(\mathbb{R}^n)</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/distribution'>distribution</a>. Then the <em><a class='existingWikiWord' href='/nlab/show/support+of+a+distribution'>singular support</a></em> <math class='maruku-mathml' display='inline' id='mathml_733a48600da8d78f3d1d0f4f0344fde037e0d90a_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>supp</mi> <mi>sing</mi></msub><mo stretchy='false'>(</mo><mi>ϕ</mi><mo stretchy='false'>)</mo><mo>⊂</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>supp_{sing}(\phi) \subset X</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/subset'>subset</a> of points such that for every <a class='existingWikiWord' href='/nlab/show/neighborhood'>open neighbourhood</a> <math class='maruku-mathml' display='inline' id='mathml_733a48600da8d78f3d1d0f4f0344fde037e0d90a_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>U</mi> <mi>x</mi></msub><mo>⊂</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>U_x \subset X</annotation></semantics></math> the <a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>restriction</a> <math class='maruku-mathml' display='inline' id='mathml_733a48600da8d78f3d1d0f4f0344fde037e0d90a_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><msub><mo stretchy='false'>|</mo> <mrow><msub><mi>U</mi> <mi>x</mi></msub></mrow></msub></mrow><annotation encoding='application/x-tex'>\phi\vert_{U_x}</annotation></semantics></math> is singular, hence not a non-singular distribution (def. <a class='maruku-ref' href='#NonSingularCompactlySupportedDistributions'>1</a>).</p>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_ac129d6a5797e90784049f0d0bce577b1af94aee_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> let <math class='maruku-mathml' display='inline' id='mathml_ac129d6a5797e90784049f0d0bce577b1af94aee_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><mo>∈</mo><mi>𝒟</mi><mo>′</mo><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\phi \in \mathcal{D}&#39;(\mathbb{R}^n)</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/distribution'>distribution</a>. Then the <em><a class='existingWikiWord' href='/nlab/show/support+of+a+distribution'>singular support</a></em> <math class='maruku-mathml' display='inline' id='mathml_ac129d6a5797e90784049f0d0bce577b1af94aee_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>supp</mi> <mi>sing</mi></msub><mo stretchy='false'>(</mo><mi>ϕ</mi><mo stretchy='false'>)</mo><mo>⊂</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>supp_{sing}(\phi) \subset X</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/subset'>subset</a> of points such that for every <a class='existingWikiWord' href='/nlab/show/neighborhood'>open neighbourhood</a> <math class='maruku-mathml' display='inline' id='mathml_ac129d6a5797e90784049f0d0bce577b1af94aee_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>U</mi> <mi>x</mi></msub><mo>⊂</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>U_x \subset X</annotation></semantics></math> the <a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>restriction</a> <math class='maruku-mathml' display='inline' id='mathml_ac129d6a5797e90784049f0d0bce577b1af94aee_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><msub><mo stretchy='false'>|</mo> <mrow><msub><mi>U</mi> <mi>x</mi></msub></mrow></msub></mrow><annotation encoding='application/x-tex'>\phi\vert_{U_x}</annotation></semantics></math> is singular, hence not a non-singular distribution (def. <a class='maruku-ref' href='#NonSingularCompactlySupportedDistributions'>1</a>).</p>
 </div>
 
 <h2 id='properties'>Properties</h2>
@@ -496,7 +496,7 @@ margin-left: 0em;
 <p><strong>(non-singular distributions are <a class='existingWikiWord' href='/nlab/show/dense+subspace'>dense</a> in all distributions)</strong></p>
 
 <p>The inclusion</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_733a48600da8d78f3d1d0f4f0344fde037e0d90a_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mn>∞</mn></msup><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo><mo>↪</mo><mi>𝒟</mi><mo>′</mo><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ac129d6a5797e90784049f0d0bce577b1af94aee_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mn>∞</mn></msup><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo><mo>↪</mo><mi>𝒟</mi><mo>′</mo><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
   C^\infty(\mathbb{R}^n) \hookrightarrow \mathcal{D}&#39;(\mathbb{R}^n)
 
 </annotation></semantics></math></div>
@@ -504,6 +504,12 @@ margin-left: 0em;
 </div>
 
 <p>(<a href='#Hoermander90'>Hörmander 90, theorem 4.1.5</a>)</p>
+
+<div class='num_defn' id='DistributionsAsGeneralizedFunctions'>
+<h6 id='remark'>Remark</h6>
+
+<p>Proposition <a class='maruku-ref' href='#NonSingularDistributionsAreDenseInAllDistributions'>1</a> justifies to think of <a class='existingWikiWord' href='/nlab/show/distribution'>distributions</a> as “<a class='existingWikiWord' href='/nlab/show/distribution'>generalized functions</a>”, and to seek generalizations of standard operations on functions, such as concepts of <em><a class='existingWikiWord' href='/nlab/show/product+of+distributions'>product of distributions</a></em> and <em><span class='newWikiWord'>composition of distributions<a href='/nlab/new/composition+of+distributions'>?</a></span></em>.</p>
+</div>
 
 <h2 id='references'>References</h2>
 
@@ -520,14 +526,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 31, 2017 10:52:46 
+  Revised on October 31, 2017 11:51:58 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.69.162)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/non-singular+distribution" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/non-singular+distribution/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/non-singular+distribution" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/non-singular+distribution" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/non-singular+distribution" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/non-singular+distribution/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/non-singular+distribution" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/non-singular+distribution" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
