--- a/pages/18646.html
+++ b/pages/18646.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -515,14 +515,26 @@ margin-left: 0em;
 </div>
 
 <h1 id='contemts'>Contemts</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>In the construction of <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> various naive mathematical constructions give rise to ill-defined “<a class='existingWikiWord' href='/nlab/show/divergent+series'>divergent</a>” expressions.</p>
 
-<p>Some of these occur in the <a class='existingWikiWord' href='/nlab/show/convergence'>limit</a> that <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> point are taken <em>close</em> to each other. Since the short distances involved in this limit translates, under <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a>, to high <a class='existingWikiWord' href='/nlab/show/frequency'>frequencies</a>, these are called <em>ultraviolet divergences</em>. The correct way to deal with them is called <em><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></em>.</p>
+<p>Some of these occur in the <a class='existingWikiWord' href='/nlab/show/convergence'>limit</a> that <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> point are taken <em>close</em> to each other. Since the short distances involved in this limit translates, under <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a>, to high <a class='existingWikiWord' href='/nlab/show/frequency'>frequencies</a> enoded in the <a class='existingWikiWord' href='/nlab/show/wavefront+set'>wave front set</a> of the <a class='existingWikiWord' href='/nlab/show/distribution'>distributions</a>; these are called <em>ultraviolet divergences</em>. The correct way to deal with them is called <em><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></em>.</p>
 
 <p>Other divergences occcur in the <a class='existingWikiWord' href='/nlab/show/convergence'>limit</a> that the spactime <a class='existingWikiWord' href='/nlab/show/support'>support</a> of the <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> (the support of the “<a class='existingWikiWord' href='/nlab/show/adiabatic+switching'>adiabatic switching</a>”) tends without bounds to all of spacetime, also called the <a class='existingWikiWord' href='/nlab/show/adiabatic+switching'>adiabatic limit</a>. Since this large distance involved in this limit translate, under <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a> to low <a class='existingWikiWord' href='/nlab/show/frequency'>frequencies</a>, these are called <em><a class='existingWikiWord' href='/nlab/show/infrared+divergence'>infrared divergences</a></em>.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/infrared+divergence'>infrared divergence</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></p>
+</li>
+</ul>
 
 <h2 id='references'>References</h2>
 
@@ -538,17 +550,21 @@ margin-left: 0em;
 <p>
  
 </p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Created on September 24, 2017 14:51:42 
+  Revised on October 31, 2017 13:09:53 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (188.105.77.106)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/ultraviolet+divergence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/ultraviolet+divergence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/ultraviolet+divergence/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/ultraviolet+divergence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/ultraviolet+divergence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
