--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,20 +308,31 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><a class='existingWikiWord' href='/nlab/files/DermisekAnticommutingSpinorFieldCoordinates.jpg' title=''></a></p>
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ae999731b78bbcdf733c040518e0f447e6be93c3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mi>d</mi><mstyle mathvariant='bold'><mi>d</mi></mstyle><mi>ϕ</mi></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mstyle mathvariant='bold'><mi>d</mi></mstyle><mi>d</mi><mi>ϕ</mi></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mstyle mathvariant='bold'><mi>d</mi></mstyle><mrow><mo>(</mo><msub><mi>ϕ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow></msub><mi>d</mi><msup><mi>x</mi> <mi>μ</mi></msup><mo>)</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mstyle mathvariant='bold'><mi>d</mi></mstyle><mspace width='thinmathspace'></mspace><mo>.</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  \begin{aligned}
+    d \mathbf{d}\phi
+    &amp; =
+    - \mathbf{d} d  \phi
+    \\
+    &amp; =
+    - \mathbf{d} \left( \phi_{,\mu} d x^\mu \right)
+    \\
+    &amp; = - \mathbf{d}
+    \,.
+  \end{aligned}
 
-<p><img src='https://ncatlab.org/nlab/files/DermisekAnticommutingSpinorFieldCoordinates.jpg' width='300'/></p>
+</annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
-  Revised on November  1, 2017 09:57:19 
+  Revised on November  1, 2017 10:36:24 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1192" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1192 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1193" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1193 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
