--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,31 +308,23 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ae999731b78bbcdf733c040518e0f447e6be93c3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mi>d</mi><mstyle mathvariant='bold'><mi>d</mi></mstyle><mi>ϕ</mi></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mstyle mathvariant='bold'><mi>d</mi></mstyle><mi>d</mi><mi>ϕ</mi></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mstyle mathvariant='bold'><mi>d</mi></mstyle><mrow><mo>(</mo><msub><mi>ϕ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow></msub><mi>d</mi><msup><mi>x</mi> <mi>μ</mi></msup><mo>)</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mstyle mathvariant='bold'><mi>d</mi></mstyle><mspace width='thinmathspace'></mspace><mo>.</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
-  \begin{aligned}
-    d \mathbf{d}\phi
-    &amp; =
-    - \mathbf{d} d  \phi
-    \\
-    &amp; =
-    - \mathbf{d} \left( \phi_{,\mu} d x^\mu \right)
-    \\
-    &amp; = - \mathbf{d}
-    \,.
-  \end{aligned}
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_1ef570c5f52fdc2b6c03a4346d072d7bfcd670df_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>⋅</mo><mi>g</mi><mo>=</mo><mover><mrow><mover><mi>f</mi><mo>^</mo></mover><mo>⋆</mo><mover><mi>g</mi><mo>^</mo></mover></mrow><mo>^</mo></mover></mrow><annotation encoding='application/x-tex'>
+  f \cdot g 
+  = 
+  \widehat{\widehat{f} \star \widehat{g}}
 
 </annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
-  Revised on November  1, 2017 10:36:24 
+  Revised on November  1, 2017 14:18:38 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.17)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1193" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1193 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1194" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1194 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
