--- a/pages/1107.html
+++ b/pages/1107.html
@@ -310,11 +310,11 @@ margin-left: 0em;
 <div id="revision">
     <h1 id='idea'>Idea</h1>
 
-<p>The <em>IPC-property</em> (“inductive limit product commutation property”) is a technical condition on a <a class='existingWikiWord' href='/nlab/show/category'>category</a> <math class='maruku-mathml' display='inline' id='mathml_75be26d45ecc393c66079df617ef01b9f2453047_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> which ensures that <a class='existingWikiWord' href='/nlab/show/presheaf'>presheaves</a> with values in <math class='maruku-mathml' display='inline' id='mathml_75be26d45ecc393c66079df617ef01b9f2453047_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> have a good notion of <a class='existingWikiWord' href='/nlab/show/sheafification'>sheafification</a>.</p>
+<p>The <em>IPC-property</em> (“inductive limit product commutation property”) is a technical condition on a <a class='existingWikiWord' href='/nlab/show/category'>category</a> <math class='maruku-mathml' display='inline' id='mathml_6af1807da939fb40267f5166173712aee54d4f04_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> which ensures that <a class='existingWikiWord' href='/nlab/show/presheaf'>presheaves</a> with values in <math class='maruku-mathml' display='inline' id='mathml_6af1807da939fb40267f5166173712aee54d4f04_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> have a good notion of <a class='existingWikiWord' href='/nlab/show/sheafification'>sheafification</a>.</p>
 
 <h1 id='definition'>Definition</h1>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/category'>category</a> <math class='maruku-mathml' display='inline' id='mathml_75be26d45ecc393c66079df617ef01b9f2453047_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> is said to satisfy the <strong>IPC-property</strong> if</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/category'>category</a> <math class='maruku-mathml' display='inline' id='mathml_6af1807da939fb40267f5166173712aee54d4f04_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> is said to satisfy the <strong>IPC-property</strong> if</p>
 
 <ul>
 <li>
@@ -326,22 +326,20 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>every family <math class='maruku-mathml' display='inline' id='mathml_75be26d45ecc393c66079df617ef01b9f2453047_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><msub><mi>I</mi> <mi>s</mi></msub><msub><mo stretchy='false'>}</mo> <mrow><mi>s</mi><mo>∈</mo><mi>S</mi></mrow></msub></mrow><annotation encoding='application/x-tex'>\{I_s\}_{s \in S}</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/small+category'>small</a> <a class='existingWikiWord' href='/nlab/show/filtered+category'>filtered</a> categories</p>
+<p>every family <math class='maruku-mathml' display='inline' id='mathml_6af1807da939fb40267f5166173712aee54d4f04_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><msub><mi>I</mi> <mi>s</mi></msub><msub><mo stretchy='false'>}</mo> <mrow><mi>s</mi><mo>∈</mo><mi>S</mi></mrow></msub></mrow><annotation encoding='application/x-tex'>\{I_s\}_{s \in S}</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/small+category'>small</a> <a class='existingWikiWord' href='/nlab/show/filtered+category'>filtered</a> categories</p>
 </li>
 
 <li>
-<p>and for any family <math class='maruku-mathml' display='inline' id='mathml_75be26d45ecc393c66079df617ef01b9f2453047_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><msub><mi>α</mi> <mi>s</mi></msub><mo>:</mo><msub><mi>I</mi> <mi>s</mi></msub><mo>→</mo><mi>A</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\{\alpha_s : I_s \to A\}</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/functor'>functor</a>s</p>
+<p>and for any family <math class='maruku-mathml' display='inline' id='mathml_6af1807da939fb40267f5166173712aee54d4f04_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><msub><mi>α</mi> <mi>s</mi></msub><mo>:</mo><msub><mi>I</mi> <mi>s</mi></msub><mo>→</mo><mi>A</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\{\alpha_s : I_s \to A\}</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/functor'>functor</a>s</p>
 </li>
 
 <li>
-<p>indexed by a <a class='existingWikiWord' href='/nlab/show/Grothendieck+universe'>small set</a> <math class='maruku-mathml' display='inline' id='mathml_75be26d45ecc393c66079df617ef01b9f2453047_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi></mrow><annotation encoding='application/x-tex'>S</annotation></semantics></math></p>
-</li>
-</ul>
+<p>indexed by a <a class='existingWikiWord' href='/nlab/show/Grothendieck+universe'>small set</a> <math class='maruku-mathml' display='inline' id='mathml_6af1807da939fb40267f5166173712aee54d4f04_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi></mrow><annotation encoding='application/x-tex'>S</annotation></semantics></math></p>
 </li>
 </ul>
 
 <p>the canonical morphism</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_75be26d45ecc393c66079df617ef01b9f2453047_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>colim</mi><mrow><mo>(</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>s</mi></munder><msub><mi>I</mi> <mi>s</mi></msub><mover><mo>→</mo><mrow><mi>k</mi><mo>↦</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>s</mi></munder><msub><mi>α</mi> <mi>s</mi></msub><mo stretchy='false'>(</mo><msub><mi>π</mi> <mi>s</mi></msub><mo stretchy='false'>(</mo><mi>j</mi><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow></mover><mi>A</mi><mo>)</mo></mrow><mo>→</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>s</mi></munder><mi>colim</mi><msub><mi>α</mi> <mi>s</mi></msub></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_6af1807da939fb40267f5166173712aee54d4f04_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>colim</mi><mrow><mo>(</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>s</mi></munder><msub><mi>I</mi> <mi>s</mi></msub><mover><mo>→</mo><mrow><mi>k</mi><mo>↦</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>s</mi></munder><msub><mi>α</mi> <mi>s</mi></msub><mo stretchy='false'>(</mo><msub><mi>π</mi> <mi>s</mi></msub><mo stretchy='false'>(</mo><mi>j</mi><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow></mover><mi>A</mi><mo>)</mo></mrow><mo>→</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>s</mi></munder><mi>colim</mi><msub><mi>α</mi> <mi>s</mi></msub></mrow><annotation encoding='application/x-tex'>
   colim \left(
     \prod_s I_s \stackrel{k \mapsto \prod_s \alpha_s(\pi_s(j))}{\to} A
   \right)
@@ -350,6 +348,8 @@ margin-left: 0em;
 
 </annotation></semantics></math></div>
 <p>is an <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a>.</p>
+</li>
+</ul>
 
 <h1 id='references'>References</h1>
 
@@ -363,14 +363,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on March 31, 2009 19:06:54 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (134.100.222.156)
+  Revised on November  1, 2017 15:08:10 
+  by <a class="existingWikiWord" href="/nlab/show/Daniel+Luckhardt">Daniel Luckhardt</a>
+  (137.250.162.107)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/IPC-property" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/IPC-property" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/IPC-property/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/IPC-property" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/IPC-property" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
