--- a/pages/17014.html
+++ b/pages/17014.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -309,21 +309,17 @@ margin-left: 0em;
 
 <div id="revision">
     <p>Daniel Luckhardt is currently a PhD student at the university of Göttingen, check out my <a href='http://www.uni-math.gwdg.de/dluckha/'>page there</a>.</p>
-
-<ul>
-<li>Javier Legris, <em>Paul Hertz and the Origin of Structural Reasoning</em>, introduction to an English translation of Hertz (1922) pp.3-10 in Béziau (ed.), <em>Universal logic from Paul Hertz to Dov Gabbay</em> , Birkhäuser Basel 2012.</li>
-</ul>
 </div>
 
 <div class="revisedby">
-  Revised on January 25, 2017 15:11:43 
+  Revised on November  1, 2017 15:09:14 
   by <a class="existingWikiWord" href="/nlab/show/Daniel+Luckhardt">Daniel Luckhardt</a>
-  (134.76.82.216)
+  (137.250.162.107)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Daniel+Luckhardt" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Daniel+Luckhardt/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Daniel+Luckhardt" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Daniel+Luckhardt" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Daniel+Luckhardt" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Daniel+Luckhardt/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Daniel+Luckhardt" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Daniel+Luckhardt" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
